--- a/server/package.json
+++ b/server/package.json
@@ -1,16 +1,18 @@
 {
-    "name": "part4",
+    "name": "server",
     "version": "1.0.0",
     "description": "fullstackopen part4 structure backend",
     "main": "index.js",
     "scripts": {
         "start": "cross-env NODE_ENV=production node index.js",
         "dev": "cross-env NODE_ENV=development nodemon index.js",
+        "build:ui": "cd ../client && npm run build",
+        "gitpush": "cd ../ && git add . && git commit -m 'update' && git push -u origin main",
         "test": "cross-env NODE_ENV=test node --test",
         "test:start": "cross-env NODE_ENV=test node index.js"
     },
     "author": "mtmarctoni",
-    "license": "UNLICENSED",
+    "license": "MIT",
     "dependencies": {
         "bcrypt": "^5.1.1",
         "cors": "^2.8.5",
