--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,7 @@ jobs:
 
     env:
       MONGO_DB_URI: ${{ secrets.MONGO_DB_URI }}
+      TEST_M: ${{ secrets.TEST_M }}
 
     steps:
       - name: Checkout repository
@@ -18,6 +19,12 @@ jobs:
 
       - name: Install npm dependencies
         run: npm install
+
+      - name: Log MongoDB URI
+        run: "echo 'MongoDB URI: $MONGO_DB_URI'"
+
+      - name: Log TEST_M
+        run: "echo 'TEST_M: $TEST_M'"
 
       - name: Start the server
         run: npm start
