--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,23 +11,23 @@ jobs:
 
     env:
       MONGO_DB_URI: ${{ secrets.MONGO_DB_URI }}
-      TEST_M: ${{ secrets.TEST_M }}
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
 
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+
       - name: Install npm dependencies
-        run: npm install
+        run: npm ci
 
-      - name: Log MongoDB URI
-        run: "echo 'MongoDB URI: $MONGO_DB_URI'"
-
-      - name: Log TEST_M
-        run: "echo 'TEST_M: $TEST_M'"
-
-      - name: Start the server
-        run: npm start
+      - name: Build the app
+        run: npm run build
+        env:
+          MONGO_DB_URI: ${{ secrets.MONGO_DB_URI }}
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
