--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "start": "cross-env NODE_ENV=production node index.js",
         "dev": "cross-env NODE_ENV=development nodemon index.js",
-        "build:ui": "rmdir /s /q dist && mkdir dist && cd client && npm run build && xcopy dist ..\\dist /e /i /h",
+        "build": "rm -rf dist && mkdir dist && cd client && npm run build && cp -r dist/* ../dist",
         "gitpush": "cd && git add . && git commit -m 'update' && git push -u origin main",
         "deploy:full": "npm run build:ui && npm run gitpush",
         "test": "cross-env NODE_ENV=test node --test",
